# Local-Assistant-P-Grade

./: .gitignore  Dockerfile  MEMORY.md  README.md  docker-compose.yml  entrypoint.sh  gemini.md  pyproject.toml
SKILLS/: change-log.md  evals.md  microspec-v2.md  safe-change-workflow.md  slice-discovery.md
SKILLS/history/: microspec.md
docs/local-llm/: CHANGE_LOG.md  local-llm_memory.md
docs/local-llm/evals/: 00-environment.eval.py  01-secure-cli.eval.py  02-privacy.eval.py  03-prompts.eval.py  04-ab-testing.eval.py  05-semantic-guardrails.eval.py  06-advanced-dashboard.eval.py
docs/local-llm/evals/fixtures/: 00-environment.fixture.py  01-secure-cli.fixture.py  02-privacy.fixture.py  03-prompts.fixture.py  04-ab-testing.fixture.py  05-semantic-guardrails.fixture.py
docs/local-llm/evals/results/: 00-environment.result.md  01-secure-cli.result.md  02-privacy.result.md  03-prompts.result.md  04-ab-testing.result.md  (+1 more)
docs/local-llm/spec/: 00-environment.md  01-secure-cli-rbac.md  02-privacy-pipeline.md  03-pro-grade-prompting.md  04-ab-testing.md  05-semantic-guardrails.md  06-advanced-dashboard.md  roadmap.md
prompts/: code_expert.yaml  creative_writing.yaml  default_v1.yaml  hallucination_judge.yaml  security_analyst.yaml  summarizer.yaml
src/: bootstrap.py  init_db.py  main.py
src/ingestion/: extractor.py  manager.py
src/orchestration/: ab_engine.py  generator.py  models.py
src/privacy/: masking.py  rules.py
src/prompts/: loader.py  models.py  watcher.py
src/security/: audit.py  auth.py  guardrails.py  metrics.py  vault.py
src/ui/: app.py
